--- a/src/assets/SidebarAdmin.css
+++ b/src/assets/SidebarAdmin.css
@@ -483,7 +483,7 @@
     }
     .iconbgadmin{
       top: 50px;
-      left: 70px;
+      left: 7vh;
     }
     .divider3admin{
       top: 530px;
@@ -493,6 +493,10 @@
     }
     .visitadmin{
       top: 610px;
+    }
+    .profile{
+      top: 10px;
+      position: relative;
     }
     
 }
