--- a/src/assets/SidebarAdmin.css
+++ b/src/assets/SidebarAdmin.css
@@ -456,7 +456,7 @@
       top: 19%;
     }
     .icon.close{
-      left: 270px !important;
+      left: 60vw !important;
       top: 50px !important;
     }
     .icon.close:before{
