--- a/src/assets/SidebarUser.css
+++ b/src/assets/SidebarUser.css
@@ -183,7 +183,7 @@
   }
   .sbt{
     background-color: #800000;
-    height: 10%;
+    height: 12.7vh;
     position: fixed;
     width: 35vh;
     top: 0;
