--- a/src/assets/SidebarUser.css
+++ b/src/assets/SidebarUser.css
@@ -181,9 +181,9 @@
     background-color: #800000;
     top: 35px;
   }
-  .sbt{
+  .sbtuser{
     background-color: #800000;
-    height: 12.7vh;
+    height: 10vh;
     position: fixed;
     width: 35vh;
     top: 0;
