--- a/src/admin/Adminapp.css
+++ b/src/admin/Adminapp.css
@@ -4,7 +4,7 @@
     top: 0px;
     left: 0px;
     height: 12.7vh;
-    width: 100%;
+    width: 100vh;
     box-shadow: 0px 2px 4px rgba(100,100,100,0.5);
   }
   @media  (max-width: 768px)  {
